--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://sakshamkamboj71:skSK2003@mail.xndkpz4.mongodb.net/UserDB?retryWrites=true&w=majority
+MONGO_URI = *Write your MongoDB URI*
